# restapi/swagger/swagger.json
@@ -37,7 +37,7 @@
                 "tags": [
                     "db"
                 ],
-                "description": "create users",
+                "description": "添加一个完整的数据 表、key、value",
                 "operationId": "DbController.CreateBucket",
                 "parameters": [
                     {
@@ -65,7 +65,7 @@
                 "tags": [
                     "db"
                 ],
-                "description": "get all Tables",
+                "description": "获取所有表的数据",
                 "operationId": "DbController.GetAllTables",
                 "responses": {
                     "200": {
@@ -77,13 +77,13 @@
                 "tags": [
                     "db"
                 ],
-                "description": "create users",
+                "description": "只添加表",
                 "operationId": "DbController.CreateUser",
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "body for user content",
+                        "description": "Tablename字段中只有tablename字段会被用到",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.Bucket"
@@ -101,6 +101,30 @@
             }
         },
         "/db/{tablename}": {
+            "get": {
+                "tags": [
+                    "db"
+                ],
+                "description": "遍历指定表的所有数据",
+                "operationId": "DbController.GetAll",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "tablename",
+                        "description": "name of table",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/.Tablename"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "tags": [
                     "db"
@@ -408,6 +432,9 @@
         }
     },
     "definitions": {
+        ".Tablename": {
+            "type": "object"
+        },
         "models.AdminUser": {
             "title": "AdminUser",
             "type": "object",
